Remove Soap-SDK support